force-app/main/default/objects/Computer_Skills_Question__c/Computer_Skills_Question__c.object-meta.xml
<CustomObject>
    <label>Computer Skills Questions</label>
    <nameField>
        <label>Computer Skills Questions</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computer Skills Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>