force-app/main/default/objects/Computer_Skills_Question__c/fields/csa_q_12__c.field-meta.xml
<CustomField>
    <fullName>csa_q_12__c</fullName>
    <label>csa_q_12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>