force-app/main/default/objects/Computer_Skills_Question__c/fields/Job_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Job_Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Candidate</label>
    <referenceTo>Job_Candidate__c</referenceTo>
    <relationshipLabel>Computer Skills Questions</relationshipLabel>
    <relationshipName>Computer_Skills_Questions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>