force-app/main/default/objects/Computer_Skills_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>csa_q_1__c</columns>
    <columns>csa_q_2__c</columns>
    <columns>csa_q_3__c</columns>
    <columns>csa_q_4__c</columns>
    <columns>csa_q_5__c</columns>
    <columns>csa_q_6__c</columns>
    <columns>csa_q_7__c</columns>
    <columns>csa_q_8__c</columns>
    <columns>csa_q_9__c</columns>
    <columns>csa_q_10__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>